--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-oauth": "^0.0.1",
     "react-router-dom": "^6.21.1",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
