--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^4.12.0",
     "react-leaflet": "^4.2.1",
     "react-leaflet-routing-machine": "^0.0.5",
+    "react-notifications": "^1.7.4",
     "react-oauth": "^0.0.1",
     "react-router-dom": "^6.21.1",
     "react-scripts": "^5.0.1",
