--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "git-removed-branches": "^2.1.0",
     "leaflet": "^1.9.4",
     "nodemon": "^3.0.1",
+    "noty": "^3.2.0-beta-deprecated",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-collapsed": "^4.1.2",
